add header and sidebar

--- a/src/auth.html
+++ b/src/auth.html
@@ -20,7 +20,7 @@
         <label class="form-field mb-5">
           <div class="text-body-1 text--medium mb-2">Логин</div>
           <div class="form-input-cover">
-            <input type="text" class="form-input pl-10" placeholder="Введите логин">
+            <input type="text" class="form-input form-input-large pl-10" placeholder="Введите логин">
             <div class="form-input-start pl-4">
               <svg class="icon color-primary">
                 <use xlink:href="img/icons.svg#user" />
@@ -31,7 +31,7 @@
         <label class="form-field">
           <div class="text-body-1 text--medium mb-2">Пароль</div>
           <div class="form-input-cover">
-            <input type="text" class="form-input pl-10" placeholder="Введите пароль">
+            <input type="text" class="form-input form-input-large pl-10" placeholder="Введите пароль">
             <div class="form-input-start pl-4">
               <svg class="icon color-primary">
                 <use xlink:href="img/icons.svg#lock" />
@@ -39,7 +39,7 @@
             </div>
           </div>
         </label>
-        <button class="btn btn--primary btn--fill w-100 mt-6">Войти</button>
+        <button class="btn btn-large btn--primary btn--fill w-100 mt-6">Войти</button>
       </div>
 
       <label class="form-field form-checkbox mt-8 theme-toggle">
@@ -55,7 +55,7 @@
         </div>
       </label>
 
-      <div class="language-list">
+      <div class="language-list auth-page-language-list">
         <button class="language-list-item btn btn--link btn--primary">
           <img src="img/language/1.png" alt="">
         </button>
@@ -91,6 +91,24 @@
         </button>
 
       </div>
+
+      <label class="language-select auth-page-language-select form-field mt-5">
+        <div class="text-body-2 mb-2">Выберите язык / Select a language</div>
+        <div class="form-input-cover">
+          <select class="form-input pl-13">
+            <option value="">Русский</option>
+            <option value="">Не русский</option>
+          </select>
+          <div class="form-input-start pl-4">
+            <img src="img/language/1.png" alt="" class="icon text-h4">
+          </div>
+          <div class="form-input-end pr-4">
+            <svg class="icon">
+              <use xlink:href="img/icons.svg#to-right" />
+            </svg>
+          </div>
+        </div>
+      </label>
 
       <div class="text-body-2 mt-6">Time: 0.04196596</div>
     </div>
