add pages; start adaptive

--- a/src/auth.html
+++ b/src/auth.html
@@ -93,7 +93,7 @@
       </div>
 
       <label class="language-select auth-page-language-select form-field mt-5">
-        <div class="text-body-2 mb-2">Выберите язык / Select a language</div>
+        <!-- <div class="text-body-2 mb-2">Выберите язык / Select a language</div> -->
         <div class="form-input-cover">
           <select class="form-input pl-13">
             <option value="">Русский</option>
