--- a/src/halls.html
+++ b/src/halls.html
@@ -17,44 +17,10 @@
 				<%= require('./includes/sidebar.html').default %>
 
 				<div class="content container">
-					<div class="text-h4 color-primary mb-5">Текущие залы</div>
+					<div class="text-h6 text-md-h4 color-primary mb-5">Текущие залы</div>
 
-					<div class="text--demibold text-body-1 mb-2">Оборот средств</div>
-					<div class="tabs mb-6">
-						<a href="javascript:;" class="tabs__item btn btn--primary color-text active">Сегодня</a>
-						<a href="javascript:;" class="tabs__item btn btn--primary color-text">Вчера</a>
-						<a href="javascript:;" class="tabs__item btn btn--primary color-text">7 дней</a>
-						<a href="javascript:;" class="tabs__item btn btn--primary color-text">30 дней</a>
-					</div>
-
-					<div class="text-body-1 text--bold mb-2">Выберите период</div>
-					<form action="" class="flex mb-5">
-						<label class="form-field field-small mr-5">
-							<div class="text-body-2 mb-2">Начало</div>
-							<div class="form-input-cover">
-								<input type="text" class="form-input pr-12" data-datepicker placeholder="15 апреля 2022">
-								<div class="form-input-end pr-4">
-									<svg class="icon text-h6 color-primary">
-										<use xlink:href="img/icons.svg#calendar" />
-									</svg>
-								</div>
-
-							</div>
-						</label>
-						<label class="form-field field-small mr-5">
-							<div class="text-body-2 mb-2">Конец</div>
-							<div class="form-input-cover">
-								<input type="text" class="form-input pr-12" data-datepicker placeholder="20 апреля 2022">
-								<div class="form-input-end pr-4">
-									<svg class="icon text-h6 color-primary">
-										<use xlink:href="img/icons.svg#calendar" />
-									</svg>
-								</div>
-
-							</div>
-						</label>
-						<button class="btn btn--primary btn--fill flex-self-end px-md-10">Показать</button>
-					</form>
+					<%= require('./includes/tabs-by-period.html').default %>
+					<%= require('./includes/search-by-period.html').default %>
 
 					<button class="btn btn--link btn--primary text--demibold ">
 						<span class="color-text">Сортировать:</span>
@@ -65,105 +31,124 @@
 						</svg>
 					</button>
 
-					<table class="table mt-5">
-						<thead class="table-head">
-							<tr class="table-row">
-								<td class="table-cell text-body-2 text--demibold text--center">ID</td>
-								<td class="table-cell text-body-2 text--demibold text--center">Название</td>
-								<td class="table-cell text-body-2 text--demibold text--center">Баланс</td>
-								<td class="table-cell text-body-2 text--demibold text--center">Компьютер</td>
-								<td class="table-cell text-body-2 text--demibold text--center">In</td>
-								<td class="table-cell text-body-2 text--demibold text--center">Out</td>
-								<td class="table-cell text-body-2 text--demibold text--center">Profit</td>
-							</tr>
-						</thead>
-						<tfoot class="table-footer">
-							<tr class="table-row">
-								<td class="table-cell text-body-2 text--demibold text--center text--demibold">Terminals:</td>
-								<td class="table-cell"></td>
-								<td class="table-cell"></td>
-								<td class="table-cell text-body-2 text--center" >228</td>
-								<td class="table-cell"></td>
-								<td class="table-cell"></td>
-								<td class="table-cell text-body-2 text--center">0,00</td>
-							</tr>
-						</tfoot>
-						<tbody class="table-body">
-              <tr class="table-row">
-								<td class="table-cell text-body-2 text--center text--demibold color-blue" colspan="7">
-									kapitan_ks [martlet]
-								</td>
-							</tr>
-              <tr class="table-row">
-                <td class="table-cell text-body-2 text--center">8531</td>
-                <td class="table-cell text-body-2 text--center">uganda</td>
-                <td class="table-cell text-body-2 text--center">31 325,00 ₽</td>
-                <td class="table-cell text-body-2 text--center">14</td>
-                <td class="table-cell text-body-2 text--center">0,00</td>
-                <td class="table-cell text-body-2 text--center">0,00</td>
-                <td class="table-cell text-body-2 text--center">0,00</td>
-              </tr>
-              <tr class="table-row">
-                <td class="table-cell text-body-2 text--center">8531</td>
-                <td class="table-cell text-body-2 text--center">uganda</td>
-                <td class="table-cell text-body-2 text--center">31 325,00 ₽</td>
-                <td class="table-cell text-body-2 text--center">14</td>
-                <td class="table-cell text-body-2 text--center">0,00</td>
-                <td class="table-cell text-body-2 text--center">0,00</td>
-                <td class="table-cell text-body-2 text--center">0,00</td>
-              </tr>
-            </tbody>
-					</table>
+					<!-- Мобильный вариант скрыт на (min-width:$md) -->
+					<div class="d-md-none">
+						<% for(let i = 0; i < 5; i++ ){ %>
+						<div class="mobile-table  mt-5">
+							<div class="mobile-table-item halls-mobile-item" data-toggle-cover>
+								<button class="halls-mobile-item__head btn btn--link btn--primary" data-toggle-link>
+									<div class="text--demibold text--underline color-text">kapitan_ks [martlet]</div>
+								</button>
+								<div data-toggle-content data-toggle-height="true" data-toggle-static="true">
+									<% for(let i = 0; i < 3; i++ ){ %>
+									<div class="halls-mobile-item__content" >
+										<div class="grid grid-spacing-1">
+											<div class="grid-col-12">
+												<div class="text-small text-xs-body-2 fade-40">#17144</div>
+											</div>
+											<div class="grid-col-5">
+												<div class="text-small text-xs-body-2 fade-80">
+													<span class="text--demibold">Название:</span>
+													<span class="text--underline">vip3r011za</span>
+												</div>
+											</div>
+											<div class="grid-col-7">
+												<div class="text-small text-xs-body-2 fade-80">
+													<span class="text--demibold">Баланс: </span>
+													<span class="text--underline">4 800 000,00 ₽</span>
+												</div>
+											</div>
+											<div class="grid-col-4 grid-col-xs-5">
+												<div class="text-small text-xs-body-2 fade-80">
+													<span class="text--demibold">Компьютер:</span>
+													<span class="text--underline">1</span>
+												</div>
+											</div>
+											<div class="grid-col-2">
+												<div class="text-small text-xs-body-2 fade-80">
+													<span class="text--demibold">In:</span>
+													<span class="text--underline">0,00</span>
+												</div>
+											</div>
+											<div class="grid-col-3 grid-col-xs-2">
+												<div class="text-small text-xs-body-2 fade-80">
+													<span class="text--demibold">Out:</span>
+													<span class="text--underline">0,00</span>
+												</div>
+											</div>
+											<div class="grid-col-3">
+												<div class="text-small text-xs-body-2 fade-80">
+													<span class="text--demibold">Profit:</span>
+													<span class="text--underline">0,00</span>
+												</div>
+											</div>
+										</div>
+									</div>
+									<% } %>
+									<div class="halls-mobile-item__footer">
+										<div class="text-small text-xs-body-2 fade-80">
+											<span class="text--demibold">Terminals:</span>
+											<span class="">228</span>
+										</div>
+										<div class="text-small text-xs-body-2 fade-80 ml-auto">
+											<span class="text--demibold">Profit:</span>
+											<span class="">0,00</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<% } %>
+					
+					</div>
 
-					<table class="table mt-5">
-						<thead class="table-head">
-							<tr class="table-row">
-								<td class="table-cell text-body-2 text--demibold text--center">ID</td>
-								<td class="table-cell text-body-2 text--demibold text--center">Название</td>
-								<td class="table-cell text-body-2 text--demibold text--center">Баланс</td>
-								<td class="table-cell text-body-2 text--demibold text--center">Компьютер</td>
-								<td class="table-cell text-body-2 text--demibold text--center">In</td>
-								<td class="table-cell text-body-2 text--demibold text--center">Out</td>
-								<td class="table-cell text-body-2 text--demibold text--center">Profit</td>
-							</tr>
-						</thead>
-						<tfoot class="table-footer">
-							<tr class="table-row">
-								<td class="table-cell text-body-2 text--demibold text--center text--demibold">Terminals:</td>
-								<td class="table-cell"></td>
-								<td class="table-cell"></td>
-								<td class="table-cell text-body-2 text--center" >228</td>
-								<td class="table-cell"></td>
-								<td class="table-cell"></td>
-								<td class="table-cell text-body-2 text--center">0,00</td>
-							</tr>
-						</tfoot>
-						<tbody class="table-body">
-              <tr class="table-row">
-								<td class="table-cell text-body-2 text--center text--demibold color-blue" colspan="7">
-									kapitan_ks [martlet]
-								</td>
-							</tr>
-              <tr class="table-row">
-                <td class="table-cell text-body-2 text--center">8531</td>
-                <td class="table-cell text-body-2 text--center">uganda</td>
-                <td class="table-cell text-body-2 text--center">31 325,00 ₽</td>
-                <td class="table-cell text-body-2 text--center">14</td>
-                <td class="table-cell text-body-2 text--center">0,00</td>
-                <td class="table-cell text-body-2 text--center">0,00</td>
-                <td class="table-cell text-body-2 text--center">0,00</td>
-              </tr>
-              <tr class="table-row">
-                <td class="table-cell text-body-2 text--center">8531</td>
-                <td class="table-cell text-body-2 text--center">uganda</td>
-                <td class="table-cell text-body-2 text--center">31 325,00 ₽</td>
-                <td class="table-cell text-body-2 text--center">14</td>
-                <td class="table-cell text-body-2 text--center">0,00</td>
-                <td class="table-cell text-body-2 text--center">0,00</td>
-                <td class="table-cell text-body-2 text--center">0,00</td>
-              </tr>
-            </tbody>
-					</table>
+					<!-- Таблица скрыта на (max-width:$md) -->
+					<div class="d-none d-md-block">
+						<% for(let i = 0; i < 5; i++ ){ %>
+						<table class="table mt-5">
+							<thead class="table-head">
+								<tr class="table-row">
+									<td class="table-cell text-body-2 text--demibold text--center">ID</td>
+									<td class="table-cell text-body-2 text--demibold text--center">Название</td>
+									<td class="table-cell text-body-2 text--demibold text--center">Баланс</td>
+									<td class="table-cell text-body-2 text--demibold text--center">Компьютер</td>
+									<td class="table-cell text-body-2 text--demibold text--center">In</td>
+									<td class="table-cell text-body-2 text--demibold text--center">Out</td>
+									<td class="table-cell text-body-2 text--demibold text--center">Profit</td>
+								</tr>
+							</thead>
+							<tfoot class="table-footer">
+								<tr class="table-row">
+									<td class="table-cell text-body-2 text--demibold text--center text--demibold">Terminals:</td>
+									<td class="table-cell"></td>
+									<td class="table-cell"></td>
+									<td class="table-cell text-body-2 text--center" >228</td>
+									<td class="table-cell"></td>
+									<td class="table-cell"></td>
+									<td class="table-cell text-body-2 text--center">0,00</td>
+								</tr>
+							</tfoot>
+							<tbody class="table-body">
+								<tr class="table-row">
+									<td class="table-cell text-body-2 text--center text--demibold color-blue text--underline" colspan="7">
+										kapitan_ks [martlet]
+									</td>
+								</tr>
+								<% for(let i = 0; i < 3; i++ ){ %>
+									<tr class="table-row">
+										<td class="table-cell text-body-2 text--center">8531</td>
+										<td class="table-cell text-body-2 text--center">uganda</td>
+										<td class="table-cell text-body-2 text--center">31 325,00 ₽</td>
+										<td class="table-cell text-body-2 text--center">14</td>
+										<td class="table-cell text-body-2 text--center">0,00</td>
+										<td class="table-cell text-body-2 text--center">0,00</td>
+										<td class="table-cell text-body-2 text--center">0,00</td>
+									</tr>
+								<% } %>
+							</tbody>
+						</table>
+						<% } %>
+					</div>
 				</div>
 			</div>
 		</div>
