--- a/src/admin-statistic.html
+++ b/src/admin-statistic.html
@@ -10,11 +10,12 @@
 
 <body>
 	<div class="root">
-		<%= require('./includes/admin-header.html').default %>
-		<%= require('./includes/header.html').default %>
+		
+		<%= _.template(require('./html-includes/admin-header.html').default)() %>
+		<%= _.template(require('./html-includes/header.html').default)() %>
 		<div class="wrapper">
 			<div class="wrapper-inner">
-				<%= require('./includes/sidebar.html').default %>
+				<%= _.template(require('./html-includes/sidebar.html').default)() %>
 				<div class="content container">
 					<div class="text-h6 text-md-h4 color-primary mb-5">Просмотр статистики</div>
 
@@ -42,7 +43,47 @@
 						</button>
 					</div>
 
-					<%= require('./includes/search-by-period.html').default %>
+					<%= _.template(require('./html-includes/search-by-period.html').default)() %>
+
+
+					<div class="grid grid-spacing-lg-10">
+						<div class="grid-col-sm-4">
+							<div class="text-body-1 text--bold mb-2">Суперагенты</div>
+							<div class="card py-1 pr-1">
+								<div class="scroll-box scroll-box-small ">
+									<% for(let i = 0; i < 10; i++){ %>
+									<div class="text-body-2 px-3 py-1 w-100 link-hover">adminstar</div>
+									<div class="text-body-2 px-3 py-1 w-100 link-hover">albert888</div>
+									<div class="text-body-2 px-3 py-1 w-100 link-hover">qpokycHuk</div>
+									<% } %>
+								</div>
+							</div>
+						</div>
+						<div class="grid-col-sm-4">
+							<div class="text-body-1 text--bold mb-2">Агенты</div>
+							<div class="card py-1 pr-1">
+								<div class="scroll-box scroll-box-small ">
+									<% for(let i = 0; i < 10; i++){ %>
+									<div class="text-body-2 px-3 py-1 w-100 link-hover">adminstar</div>
+									<div class="text-body-2 px-3 py-1 w-100 link-hover">albert888</div>
+									<div class="text-body-2 px-3 py-1 w-100 link-hover">qpokycHuk</div>
+									<% } %>
+								</div>
+							</div>
+						</div>
+						<div class="grid-col-sm-4">
+							<div class="text-body-1 text--bold mb-2">Залы</div>
+							<div class="card py-1 pr-1">
+								<div class="scroll-box scroll-box-small ">
+									<% for(let i = 0; i < 10; i++){ %>
+									<div class="text-body-2 px-3 py-1 w-100 link-hover">adminstar</div>
+									<div class="text-body-2 px-3 py-1 w-100 link-hover">albert888</div>
+									<div class="text-body-2 px-3 py-1 w-100 link-hover">qpokycHuk</div>
+									<% } %>
+								</div>
+							</div>
+						</div>
+					</div>
 
 				</div>
 			</div>
