--- a/src/html-includes/search-by-period.html
+++ b/src/html-includes/search-by-period.html
@@ -1,6 +1,6 @@
 <div class="text-body-1 text--bold mb-2">Выберите период</div>
 <form action="" class="flex mb-5">
-  <label class="form-field field-small mr-5 flex-grow">
+  <label class="form-field field-xsmall mr-5 flex-grow">
     <div class="text-body-2 mb-2">Начало</div>
     <div class="form-input-cover">
       <input type="text" class="form-input pr-12 text-small text-xs-body-1" data-datepicker placeholder="15 апреля 2022">
@@ -12,7 +12,7 @@
 
     </div>
   </label>
-  <label class="form-field field-small mr-md-5 flex-grow">
+  <label class="form-field field-xsmall mr-md-5 flex-grow">
     <div class="text-body-2 mb-2">Конец</div>
     <div class="form-input-cover">
       <input type="text" class="form-input pr-12 text-small text-xs-body-1" data-datepicker placeholder="20 апреля 2022">
