--- a/src/html-includes/sidebar.html
+++ b/src/html-includes/sidebar.html
@@ -49,12 +49,12 @@
           <option value="">Зал 1</option>
           <option value="">Зал 2</option>
         </select>
-        <div class="form-input-start pl-4">
+        <div class="form-input-start pl-4 pe-none">
           <svg class="icon text-h6 color-primary">
             <use xlink:href="img/icons.svg#regroup" />
           </svg>
         </div>
-        <div class="form-input-end pr-4">
+        <div class="form-input-end pr-4 pe-none">
           <svg class="icon text-small">
             <use xlink:href="img/icons.svg#to-right" />
           </svg>
@@ -65,7 +65,7 @@
       <div class="text-body-2 text--medium mb-2">Поиск</div>
       <div class="form-input-cover">
         <input type="text" class="form-input pl-12" placeholder="Name/ID">
-        <div class="form-input-start pl-4">
+        <div class="form-input-start pl-4 pe-none">
           <svg class="icon text-h6 color-primary">
             <use xlink:href="img/icons.svg#search" />
           </svg>
@@ -129,21 +129,21 @@
   </label>
 
   <label class="language-select form-field mt-5">
-    <div class="text-body-2 mb-2">Выберите язык / Select a language</div>
     <div class="form-input-cover">
       <select class="form-input pl-13">
         <option value="">Русский</option>
         <option value="">Не русский</option>
       </select>
-      <div class="form-input-start pl-4">
+      <div class="form-input-start pl-4 pe-none">
         <img src="img/language/1.png" alt="" class="icon text-h4">
       </div>
-      <div class="form-input-end pr-4">
+      <div class="form-input-end pr-4 pe-none">
         <svg class="icon">
           <use xlink:href="img/icons.svg#to-right" />
         </svg>
       </div>
     </div>
   </label>
+
 </aside>
 <div class="sidebar-shadow"></div>
