--- a/src/ui.html
+++ b/src/ui.html
@@ -489,7 +489,7 @@
 							class=<span class="color-yellow">"form-input-checkbox"</span>&gt;<br>
 							&nbsp;&nbsp;&lt;<span class="color-primary">div</span> class=<span class="color-yellow">"form-<span
 									class="color-green">[</span> radio <span class="color-green">|</span> toggle <span
-									class="color-green">]</span>-target"</span>&gt; <span class="color-primary">/div</span>&gt;<br>
+									class="color-green">]</span>-target"</span>&gt; &lt;<span class="color-primary">/div</span>&gt;<br>
 							&nbsp;&nbsp;&lt;<span class="color-primary">div</span> class=<span class="color-yellow">"text-body-2
 								ml-2"</span>&gt; Выберите вариант &lt;<span class="color-primary">/div</span>&gt;<br>
 							&lt;<span class="color-primary">/label</span>&gt;<br>
