--- a/src/agents.html
+++ b/src/agents.html
@@ -10,16 +10,16 @@
 
 <body>
 	<div class="root">
-		<%= require('./includes/header.html').default %>
+		<%= _.template(require('./html-includes/header.html').default)() %>
 
 		<div class="wrapper">
 			<div class="wrapper-inner">
-				<%= require('./includes/sidebar.html').default %>
+				<%= _.template(require('./html-includes/sidebar.html').default)() %>
 
 				<div class="content container">
 					<div class="text-h6 text-md-h4 color-primary mb-5">Суперагенты</div>
 
-					<%= require('./includes/search-by-phone.html').default %>
+					<%= _.template(require('./html-includes/search-by-phone.html').default)() %>
 
 					<!-- Мобильный вариант скрыт на (min-width:$md) -->
 					<div class="d-md-none">
