--- a/src/html-dialogs/dialog-large.html
+++ b/src/html-dialogs/dialog-large.html
@@ -1,7 +1,7 @@
-<div class="dialog-middle card">
+<div class="dialog-large card bg-l3">
   <div class="card-content">
-    <div class="text-subtitle-1 mb-2">.dialog-middle</div>
-    <div class="text-subtitle-2 mb-4">Have 620px width</div>
+    <div class="text-subtitle-1 mb-2">.dialog-large</div>
+    <div class="text-subtitle-2 mb-4">Have content width</div>
     <div class="text-body-2">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, deserunt voluptate. Soluta
       eligendi expedita adipisci fugit perspiciatis iusto mollitia, amet, ratione voluptates a laboriosam,
