--- a/src/html-includes/header.html
+++ b/src/html-includes/header.html
@@ -25,12 +25,12 @@
           <option value="">Зал 1</option>
           <option value="">Зал 2</option>
         </select>
-        <div class="form-input-start pl-4">
+        <div class="form-input-start pl-4 pe-none">
           <svg class="icon text-h6 color-primary">
             <use xlink:href="img/icons.svg#regroup" />
           </svg>
         </div>
-        <div class="form-input-end pr-4">
+        <div class="form-input-end pr-4 pe-none">
           <svg class="icon text-small">
             <use xlink:href="img/icons.svg#to-right" />
           </svg>
