--- a/src/logs.html
+++ b/src/logs.html
@@ -51,14 +51,14 @@
 								</tr>
 								<% for(let i=0; i < 5; i++ ){ %>
 									<tr class="table-row">
-										<td class="table-cell text-body-2 text--center text--demibold">#28268399397</td>
-										<td class="table-cell text-body-2 text--center text--demibold">15:07:32 15-06-2022</td>
+										<td class="table-cell text-body-2 text--center text--underline">#28268399397</td>
+										<td class="table-cell text-body-2 text--center text--underline">15:07:32 15-06-2022</td>
 										<td class="table-cell text-body-2 text--center">safariheat</td>
 										<td class="table-cell text-body-2 text--center">20</td>
 										<td class="table-cell text-body-2 text--center">0.20</td>
 										<td class="table-cell text-body-2 text--center">0</td>
 										<td class="table-cell text-body-2 text--center">0.00</td>
-										<td class="table-cell text-body-2 text--center text--demibold">0.00</td>
+										<td class="table-cell text-body-2 text--center text--underline">0.00</td>
 									</tr>
 								<% } %>
 							</tbody>
